# MissionControl

./: .gitignore  CMakeLists.txt  修改说明.txt
MissionAlg/: CMakeLists.txt
MissionAlg/include/: BINARYSEARCH_real_T.h  DatalinkInterface.h  DeSerOtherUAV.h  DeSerOtherUAV_private.h  DeSerOtherUAV_types.h  FlightMissionIterator.h  FlightMissionIterator_private.h  FlightMissionIterator_types.h  FlightMissionMode.h  FlightMissionMode_private.h  FlightMissionMode_types.h  GCS_Location.h  ImmedMission.h  ImmedMission_private.h  ImmedMission_types.h  LookUp_real_T_real_T.h  MissionModes.h  MissionUAV.h  MissionUAV_private.h  MissionUAV_types.h  PreemptableMissionModeSelector.h  PreemptableMissionModeSelector_private.h  PreemptableMissionModeSelector_types.h  Real2SimGuidance.h  Real2SimGuidance_private.h  Real2SimGuidance_types.h  RecvData_IndividualUAVCmdT.h  RecvData_RealUAVStateBusT.h  RecvData_VectorSpeedT.h  RecvData_uint8_T.h  SendData_FCUCMDT.h  SendData_IndividualUAVCmdT.h  SendData_TaskStatusT.h  SendData_real_T.h  angdiff_9SMt2WI9.h  angdiff_GFr2Xk58.h  angdiff_WJjwZrD2.h  angdiff_e8uhYa4N.h  autonomouscodegen_constants.hpp  autonomouscodegen_dubins.hpp  (+92 more)
MissionAlg/ref/: ert_main.cpp.ref
MissionAlg/src/: BINARYSEARCH_real_T.cpp  DeSerOtherUAV.cpp  FlightMissionIterator.cpp  FlightMissionMode.cpp  GCS_Location.cpp  ImmedMission.cpp  LookUp_real_T_real_T.cpp  MissionUAV.cpp  PreemptableMissionModeSelector.cpp  PreemptableMissionModeSelector_data.cpp  Real2SimGuidance.cpp  Real2SimGuidance_data.cpp  angdiff_9SMt2WI9.cpp  angdiff_GFr2Xk58.cpp  angdiff_WJjwZrD2.cpp  angdiff_e8uhYa4N.cpp  autonomouscodegen_dubins.cpp  codegenLogging.cpp  codegenReal2Mission.cpp  codegenReal2Mission_data.cpp  coder_posix_time.c  const_params.cpp  days2ymd_PW1eFTC1.cpp  desktop.ini  div_nde_s32_floor.cpp  div_s32.cpp  div_s32_floor.cpp  div_s32_sat.cpp  ert_main.cpp  ert_main.cpp.bak  ert_main.cpp.ref  floor_0EeG1Grp.cpp  floor_6aYiD2p8.cpp  floor_LKLalLcG.cpp  floor_jeUa7tf2.cpp  isPalindrome_KPAwztvD.cpp  isPalindrome_QBg8pX4c.cpp  isequaln_OcM3ORTV.cpp  linspace_Fzs74Tls.cpp  linspace_Q5Un26da.cpp  (+48 more)
MissionApp/: CMakeLists.txt  Z140.config  Z164.config
MissionApp/include/: AlgoWrapper.h  CircleFormation.h  DataLogging.hpp  Executor.hpp  MW_ert_main.h  MissionCircleFormation.h  MissionData.h  ModelIO.hpp  WorkerPool.hpp  msgQueue.hpp  protocol.h  swarmBasicData.h
MissionApp/src/: AlgoWrapper.cpp  CircleFormation.cpp  DataLogging.cpp  FlightLog.sqlite  IntelligentCircle.cpp  MW_ert_main.cpp  MissionCircleFormation.cpp  MissionData.cpp  ModelIO.cpp  ert_main.cpp  ert_main.cpp.bak  msgQueue.cpp
app/: MissionControl
include/: CircleFormation.h  MissionCircleFormation.h  MissionData.h  builtin_typeid_types.h  codegenReal2Mission.h  codegenReal2Mission_private.h  codegenReal2Mission_types.h  multiword_types.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_modd_snf.h  rt_nonfinite.h  rtwtypes.h  swarmBasicData.h  zero_crossing_types.h
runtime/: MissionControl
src/: CircleFormation.cpp  IntelligentCircle.cpp  MissionCircleFormation.cpp  MissionData.cpp  angdiff_GFr2Xk58.cpp  codegenReal2Mission.cpp  codegenReal2Mission_data.cpp  ert_main.cpp.ref  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  test.cpp.bak
